--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-router": "^6.14.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.7.4",
+    "react-select-async-paginate": "^0.7.3",
     "recharts": "^2.7.2",
     "sass": "^1.64.1",
     "web-vitals": "^2.1.4"
