--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
+    "luxon": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
@@ -20,8 +21,10 @@
     "react-scripts": "^5.0.1",
     "react-select": "^5.7.4",
     "react-select-async-paginate": "^0.7.3",
+    "react-slick": "^0.29.0",
     "recharts": "^2.7.2",
     "sass": "^1.64.1",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
